--- a/Data_Analysis/templates/Data_Analysis/import_data.html
+++ b/Data_Analysis/templates/Data_Analysis/import_data.html
@@ -14,5 +14,8 @@
         <button type="submit">Import</button>
     </form>
 </div>
+<div>
+    <a href="{% url "my_data" %}">My data</a>
+</div>
 
 {% endblock content %}
