--- a/Data_Analysis/templates/Data_Analysis/success_page.html
+++ b/Data_Analysis/templates/Data_Analysis/success_page.html
@@ -10,8 +10,10 @@
 {% if processed_data_html %}
     <h2>Processed Data:</h2>
     <div>
-        {{ processed_data_html|safe }}
+        <p>Data name: {{ data_name }}</p>
+        <p>Processed data: {{ processed_data_html|safe }}</p>
     </div>
 {% endif %}
-
+<a href="{% url "import_data" %}">Import more data</a>
+<a href="{% url "my_data" %}">My data</a>
 {% endblock content %}
