import and preprocessing data, initial outline of my_data and data_analysis page

--- a/Data_Analysis/templates/Data_Analysis/my_data.html
+++ b/Data_Analysis/templates/Data_Analysis/my_data.html
@@ -21,7 +21,7 @@
         <tbody>
             {% for data in preprocessed_data %}
                 <tr>
-                    <td><a href="#">{{ data.data_name }}</a></td>
+                    <td>{{ data.data_name }}</a></td>
                     <td>{{ data.timestamp }}</td>
                 </tr>
             {% endfor %}
