--- a/Data_Analysis/templates/Data_Analysis/import_data.html
+++ b/Data_Analysis/templates/Data_Analysis/import_data.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Import{% endblock title %}
 
-{% block static_file %}{% endblock static_file %}
+{% block static_file %}
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src='{% static "Data_Analysis/import_data.js" %}'></script>
+{% endblock static_file %}
 
 {% block content %}
 
@@ -14,6 +18,7 @@
         <button type="submit">Import</button>
     </form>
 </div>
+<div id="loading-spinner" style="display: none;">Processing data<span id="dots"></span></div>
 <div>
     <a href="{% url "my_data" %}">My data</a>
 </div>
