--- a/Data_Analysis/templates/Data_Analysis/import_data.html
+++ b/Data_Analysis/templates/Data_Analysis/import_data.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Import{% endblock title %}
+{% block title %}Import Data{% endblock title %}
 
 {% block static_file %}
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
