--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document {% block title %}{% endblock title %} </title>
+    <title> {% block title %}{% endblock title %} </title>
     {% block static_file %}{% endblock static_file %}
 </head>
 <body>
